force-app/main/default/objects/Sms_Outbound__c/Sms_Outbound__c.object-meta.xml
<CustomObject>
    <description>Outbound SMS queue for the Android SIM gateway app</description>
    <label>SMS Outbound</label>
    <nameField>
        <displayFormat>SMS-{00000}</displayFormat>
        <label>SMS Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Outbound</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>