force-app/main/default/objects/Sms_Outbound__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related booking request, when applicable</description>
    <label>Booking</label>
    <referenceTo>Shadikhana_Booking__c</referenceTo>
    <relationshipLabel>SMS Outbound</relationshipLabel>
    <relationshipName>SMS_Outbound</relationshipName>
    <type>Lookup</type>
</CustomField>