force-app/main/default/objects/Sms_Outbound__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Error returned by the Android gateway</description>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>