force-app/main/default/objects/Sms_Outbound__c/fields/Message_Body__c.field-meta.xml
<CustomField>
    <fullName>Message_Body__c</fullName>
    <description>SMS text to send</description>
    <label>Message Body</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>