force-app/main/default/objects/Sms_Outbound__c/fields/Sent_At__c.field-meta.xml
<CustomField>
    <fullName>Sent_At__c</fullName>
    <description>When the Android app reported the SMS as sent</description>
    <label>Sent At</label>
    <type>DateTime</type>
</CustomField>