force-app/main/default/objects/Sms_Outbound__c/fields/To_Number__c.field-meta.xml
<CustomField>
    <fullName>To_Number__c</fullName>
    <description>Recipient mobile number (E.164 or 10-digit India)</description>
    <label>To Number</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>